test/SILPasses/static_report.sil
// RUN: %swift %s -emit-sil -verify
import Builtin

// fold_sadd_with_overflow_Overflow
sil @fold_sadd_with_overflow_Overflow : $[thin] (x: Builtin.RawPointer) -> Builtin.RawPointer {
bb0(%0 : $Builtin.RawPointer):
  %1 = integer_literal $Builtin.Int1, 1
  %2 = builtin_function_ref #Builtin.staticReport : $[thin] (Builtin.Int1, Builtin.Int1, Builtin.RawPointer) -> ()
  %3 = apply %2(%1, %1, %0) : $[thin] (Builtin.Int1, Builtin.Int1, Builtin.RawPointer) -> () // expected-error {{static report error}}
  return %0 : $Builtin.RawPointer
}
